@@ -21,6 +21,8 @@ Version 1.8.4 patchlevel 1                                 ??? ??,  2010
 Minor Changes:
  * @power now reports when you try and set a power which is already set (or
    clear one which isn't set), similar to @set. Suggested by Paige. [MG]
+ * Sorting methods now take - as a prefix to sort type in order to sort
+   in descending order. Suggested by Minion. [GM]
 
 Commands:
  * Add /preserve switch to @chzone and @chzoneall, like @chown/preserve.
